; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/dev/cgd/extr_t_cgd_3des.c_read_testvec.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/dev/cgd/extr_t_cgd_3des.c_read_testvec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.testvec = type { i32, i32 }

@SECSIZE = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.testvec*)* @read_testvec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_testvec(i32 %0, %struct.testvec* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.testvec*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.testvec* %1, %struct.testvec** %5, align 8
  store i32 -1, i32* %7, align 4
  %8 = load i32, i32* @SECSIZE, align 4
  %9 = call i8* @malloc(i32 %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %43

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.testvec*, %struct.testvec** %5, align 8
  %16 = getelementptr inbounds %struct.testvec, %struct.testvec* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @SECSIZE, align 4
  %19 = mul nsw i32 %17, %18
  %20 = load i32, i32* @SEEK_SET, align 4
  %21 = call i64 @rump_sys_lseek(i32 %14, i32 %19, i32 %20)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %13
  br label %39

24:                                               ; preds = %13
  %25 = load i32, i32* %4, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* @SECSIZE, align 4
  %28 = call i32 @rump_sys_read(i32 %25, i8* %26, i32 %27)
  %29 = load i32, i32* @SECSIZE, align 4
  %30 = icmp ne i32 %28, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %24
  br label %39

32:                                               ; preds = %24
  %33 = load i8*, i8** %6, align 8
  %34 = load %struct.testvec*, %struct.testvec** %5, align 8
  %35 = getelementptr inbounds %struct.testvec, %struct.testvec* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @SECSIZE, align 4
  %38 = call i32 @memcmp(i8* %33, i32 %36, i32 %37)
  store i32 %38, i32* %7, align 4
  br label %39

39:                                               ; preds = %32, %31, %23
  %40 = load i8*, i8** %6, align 8
  %41 = call i32 @free(i8* %40)
  %42 = load i32, i32* %7, align 4
  store i32 %42, i32* %3, align 4
  br label %43

43:                                               ; preds = %39, %12
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i64 @rump_sys_lseek(i32, i32, i32) #1

declare dso_local i32 @rump_sys_read(i32, i8*, i32) #1

declare dso_local i32 @memcmp(i8*, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
